--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
 
   <h1>Hi, I'm AnorakX, a diverse Python developer.</h1>
   {% if site.theme_config.show_description == true %}
-    <p>I'm a student and developer who has been coding in [Python](https://www.python.org) since 2018 and started using Discord.py when the pandemic began.</p>
+    <p>I'm a student and developer who has been coding in <a href="https://python.org">Python</a> since 2018 and started using Discord.py when the pandemic began.</p>
   {% endif %}
 </header>
 
