--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,11 +8,16 @@ layout: default
   <div class="dashed" />
 {% endif %}
 
-  <h1>Hi, I'm AnorakX, a diverse Python developer.</h1>
+  <h1>Hi, I'm AnorakX, a <u>diverse</u> Python developer.</h1>
   {% if site.theme_config.show_description == true %}
     <p>I'm a student and developer who has been coding in <u><b><a href="https://python.org">Python</a></b></u> since 2018 and started using Discord.py when the pandemic began.</p>
   {% endif %}
 </header>
+
+{% if site.theme_config.show_projects == true %}
+  <h2>Projects</h2>
+  {% include card_list.html collection=site.data.home.project_entries %}
+{% endif %}
 
 {% if site.theme_config.show_projects == true %}
   <h2>Projects</h2>
