--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,8 +15,8 @@ layout: default
 </header>
 
 {% if site.theme_config.show_projects == true %}
-  <h2>Projects</h2>
-  {% include card_list.html collection=site.data.home.project_entries %}
+  <h2>Skills</h2>
+  {% include card_list.html collection=site.data.home.skills %}
 {% endif %}
 
 {% if site.theme_config.show_projects == true %}
