--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,8 +20,8 @@ layout: default
 {% endif %}
 
 {% if site.theme_config.show_projects == true %}
-  <h2>Projects</h2>
-  {% include card_list.html collection=site.data.home.project_entries %}
+  <h2>Discord.py Projects</h2>
+  {% include card_list.html collection=site.data.home.discord_project_entries %}
 {% endif %}
 
 {% if site.theme_config.show_misc_list == true %}
