--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,6 +19,20 @@ layout: default
   {% include card_list.html collection=site.data.home.skills %}
 {% endif %}
 
+<h2>Discord.py Skills</h2>
+- Custom economy with dynamic inventories, cooldowns, shops, and more
+- Custom leveling with automatic role assignments, custom level-up messages, and more
+- Moderation with dynamic warn system
+- Logging
+- Reddit posting
+- Modmail/Ticketing
+- Trivia and other minigames
+- Reaction and color-changing roles
+- Welcome messages
+- Basic music
+- Private/temporary voice channel creation (useful for gaming)
+- And more! DM me today to ask me if I can do something.
+
 {% if site.theme_config.show_projects == true %}
   <h2>Discord.py Projects</h2>
   {% include card_list.html collection=site.data.home.discord_project_entries %}
