--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,6 +21,7 @@ layout: default
 
 {% if site.theme_config.show_projects == true %}
   <h2>Discord.py Projects</h2>
+<p><i>Click on the cards to see more info!</i></p>
   {% include card_list.html collection=site.data.home.discord_project_entries %}
 {% endif %}
 
