--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,7 @@ layout: default
   <h1>Hi, I'm AnorakX, a <u>diverse</u> Python developer.</h1>
   {% if site.theme_config.show_description == true %}
     <p>I'm a student and developer who has been coding in <u><b><a href="https://python.org">Python</a></b></u> since 2018 and started using Discord.py when the pandemic began.</p>
+  <p>I also founded <b>Nexus Services</b>, a Discord group that provides a "one-stop shop" for common popular Discord services. [Read more about Nexus Services and how to hire us! (and me)](https://anorakx.github.io/nexusservices)
   {% endif %}
 </header>
 
@@ -29,7 +30,6 @@ layout: default
   <h2>Details</h2>
   {% include vertical_list.html collection=site.data.home.misc_entries %}
 {% endif %}
-
 
 {% if site.theme_config.show_footer == true %}
   <footer>
