--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
   <h1>Hi, I'm AnorakX, a <u>diverse</u> Python developer.</h1>
   {% if site.theme_config.show_description == true %}
     <p>I'm a student and developer who has been coding in <u><b><a href="https://python.org">Python</a></b></u> since 2018 and started using Discord.py when the pandemic began.</p>
-  <p>I also founded <b>Nexus Services</b>, a Discord group that provides a "one-stop shop" for common popular Discord services. [Read more about Nexus Services and how to hire us! (and me)](https://anorakx.github.io/nexusservices)
+  <p>I also founded <b>Nexus Services</b>, a Discord group that provides a "one-stop shop" for common popular Discord services. <a href="https://anorakx.github.io/nexusservices">Read more about Nexus Services and how to hire us! (and me)</a>
   {% endif %}
 </header>
 
